// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders address initials if only address is passed in 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 0,
          "justifyContent": "center",
        },
        Object {
          "borderRadius": 30,
          "height": 60,
          "width": 60,
        },
        Object {
          "backgroundColor": "rgba(91,84,199,1)",
        },
        Object {
          "padding": 15,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 15,
            "textAlign": "center",
          },
          undefined,
          Object {
            "color": "white",
            "fontSize": 15,
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`renders address initials if only address passed in and custom size 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 0,
          "justifyContent": "center",
        },
        Object {
          "borderRadius": 50,
          "height": 100,
          "width": 100,
        },
        Object {
          "backgroundColor": "rgba(91,84,199,1)",
        },
        Object {
          "padding": 25,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 15,
            "textAlign": "center",
          },
          undefined,
          Object {
            "color": "white",
            "fontSize": 25,
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`renders image if avatar is passed in 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 0,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "white",
          "borderRadius": 50,
          "height": 60,
          "width": 60,
        },
      ]
    }
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "uri": "http:/image.hello.jpg",
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 30,
            "height": 60,
            "width": 60,
          },
          Object {
            "position": "absolute",
          },
          Array [
            Object {
              "borderRadius": 30,
              "height": 60,
              "width": 60,
            },
            undefined,
          ],
        ]
      }
    />
  </View>
</View>
`;

exports[`renders image if avatar is passed in and custom size 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 0,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "white",
          "borderRadius": 50,
          "height": 100,
          "width": 100,
        },
      ]
    }
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "uri": "http:/image.hello.jpg",
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 50,
            "height": 100,
            "width": 100,
          },
          Object {
            "position": "absolute",
          },
          Array [
            Object {
              "borderRadius": 50,
              "height": 100,
              "width": 100,
            },
            undefined,
          ],
        ]
      }
    />
  </View>
</View>
`;

exports[`renders image if uri is passed in 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 0,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "white",
          "borderRadius": 50,
          "height": 60,
          "width": 60,
        },
      ]
    }
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "name": "Bill Jeffries Smith",
          "uri": "http:/image.hello.jpg",
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 30,
            "height": 60,
            "width": 60,
          },
          Object {
            "position": "absolute",
          },
          Array [
            Object {
              "borderRadius": 30,
              "height": 60,
              "width": 60,
            },
            undefined,
          ],
        ]
      }
    />
  </View>
</View>
`;

exports[`renders image if uri is passed in and custom size 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 0,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "white",
          "borderRadius": 50,
          "height": 100,
          "width": 100,
        },
      ]
    }
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "name": "Bill Jeffries Smith",
          "uri": "http:/image.hello.jpg",
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 50,
            "height": 100,
            "width": 100,
          },
          Object {
            "position": "absolute",
          },
          Array [
            Object {
              "borderRadius": 50,
              "height": 100,
              "width": 100,
            },
            undefined,
          ],
        ]
      }
    />
  </View>
</View>
`;

exports[`renders initials if only name is passed in 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 0,
          "justifyContent": "center",
        },
        Object {
          "borderRadius": 30,
          "height": 60,
          "width": 60,
        },
        Object {
          "backgroundColor": "rgba(91,84,199,1)",
        },
        Object {
          "padding": 15,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 15,
            "textAlign": "center",
          },
          undefined,
          Object {
            "color": "white",
            "fontSize": 15,
          },
        ]
      }
    >
      BS
    </Text>
  </View>
</View>
`;

exports[`renders initials if only name passed in and custom size 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 0,
          "justifyContent": "center",
        },
        Object {
          "borderRadius": 50,
          "height": 100,
          "width": 100,
        },
        Object {
          "backgroundColor": "rgba(91,84,199,1)",
        },
        Object {
          "padding": 25,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 15,
            "textAlign": "center",
          },
          undefined,
          Object {
            "color": "white",
            "fontSize": 25,
          },
        ]
      }
    >
      BS
    </Text>
  </View>
</View>
`;
